背景图片修改

--- a/flaskProject-master/templates/login.html
+++ b/flaskProject-master/templates/login.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <title>login</title>
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <style>
+        .image-layer {
+       background:url("../static/up_file/3.PNG") no-repeat center;
+       background-size:contain;
+
+}
+    </style>
 </head>
 <body>
+    <div class="image-layer">
     <form style="width: 400px;margin: 100px auto" method="post" >
       <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">用户名</label>
